SERVER-65542 Fix ticket resize

(cherry picked from commit 1cb9c79cdffc6dcf4a6b30045100483f8e121a33)